--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+target/classes/decks
+target/classes/cards
+target/classes/decklists
+target/classes/collections
 *.iws
 *.iml
 *.ipr
